# Fractal

./: Fractal-2.0.apk  Here_Is_The_Apk_File.apk  README.md
Fractal/: .classpath  .project  AndroidManifest.xml  project.properties
Fractal/res/layout/: activity_list.xml  activity_logo.xml  activity_main.xml  activity_setting.xml  activity_share.xml  setting_tree2.xml
Fractal/res/values/: strings.xml
FractalAndroid/app/: build.gradle
FractalAndroid/app/src/main/cpp/: CMakeLists.txt
FractalAndroid/app/src/main/cpp/Android/: CMakeLists.txt  Interface.cpp  com_redknot_julia_JuliaJNI.h
FractalAndroid/app/src/main/cpp/HstGL/: CMakeLists.txt  GL.hpp  RedGL.hpp
FractalAndroid/app/src/main/cpp/HstGL/GLComponent/: DrawCall.cpp  GLComponent.hpp  Render.cpp
FractalAndroid/app/src/main/cpp/HstGL/GLPaint/: GLLine.cpp  GLPaint.hpp
FractalAndroid/app/src/main/cpp/HstGL/GLProgram/: GLProgram.cpp  GLProgram.hpp  GLShader.cpp
FractalAndroid/app/src/main/cpp/HstGL/GLTexture/: GLTexture.cpp  GLTexture.hpp
FractalAndroid/app/src/main/cpp/HstGL/GLVAO/: GLVAO.cpp  GLVAO.hpp
FractalAndroid/app/src/main/cpp/HstGL/IMAGE/: ImageFile.cpp  file.hpp
FractalAndroid/app/src/main/cpp/HstGL/Shader/: Header.hpp  Shader.hpp
FractalAndroid/app/src/main/cpp/RedLib/: CMakeLists.txt  Debug.h  RedLib.cpp  RedLib.h
FractalAndroid/app/src/main/cpp/RedLib/Thread/: RedThread.cpp
FractalAndroid/gradle/wrapper/: gradle-wrapper.properties
FractalPad/app/: build.gradle  proguard-rules.pro
FractalPad/gradle/wrapper/: gradle-wrapper.properties
OpenGLDemo/: .project  AndroidManifest.xml
OpenGLDemo/res/layout/: activity_main.xml
OpenGLDemo/res/values/: strings.xml
Thinkkepu/.svn/: wc.db
Thinkkepu/res/drawable/: progress_bar_states.xml
Thinkkepu/res/layout/: activity_activity.xml  activity_article.xml  activity_login.xml  activity_logo.xml  activity_main.xml  activity_subject.xml  fragment_main.xml  listview_first.xml  (+4 more)
hFractal/: code.txt
(+125 files in other folders)
