PROJECT(HST)

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fexceptions")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -frtti")

set(CMAKE_BUILD_TYPE "Release")

set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/../jniLibs/${ANDROID_ABI})

MESSAGE(STATUS "operation system is ${CMAKE_SYSTEM}")

MESSAGE(STATUS "current platform: Android")

option(DLIB_JPEG_SUPPORT "DLIB_JPEG_SUPPORT" ON)

ADD_SUBDIRECTORY(Android)
ADD_SUBDIRECTORY(RedLib)
ADD_SUBDIRECTORY(HstGL)

find_package(Threads)
